Filled in the remaining keywords to conditions treated page, adjusted classes and fixed error where I overwrote the 2_block_row div

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 26 2020 12:47:05 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 27 2020 02:27:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
       <div class="_2_block_row_ailment_right">
         <div class="_2_block"></div>
         <div class="_2_block">
-          <h3 class="ailment_h3_right">MUSCOSKELETAL, NEUROLOGICAL</h3>
+          <h3 class="ailment_h3_right">MUSCOSKELETAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -42,8 +42,8 @@
                 <li class="ailment_list_item">Golfer&#x27;s Elbow</li>
                 <li class="ailment_list_item">Carpal Tunnel Syndrome</li>
                 <li class="ailment_list_item">TMJ Syndrome</li>
-                <li class="ailment_list_item">Stroke</li>
-                <li class="ailment_list_item">Facial Paralysis</li>
+                <li class="ailment_list_item">Injury Recovery</li>
+                <li class="ailment_list_item">Hip Pain</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -52,24 +52,89 @@
                 <li class="ailment_list_item">Lower Back Pain</li>
                 <li class="ailment_list_item">Frozen Shoulder</li>
                 <li class="ailment_list_item">Knee Pain</li>
+                <li class="ailment_list_item">Sprain / Strain</li>
+                <li class="ailment_list_item">Neuropathies</li>
+                <li class="ailment_list_item">Dental Pain</li>
+                <li class="ailment_list_item">Osteoarthritis</li>
+                <li class="ailment_list_item">Ankle Pain</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Upper Back Pain</li>
+                <li class="ailment_list_item">Tennis Elbow</li>
+                <li class="ailment_list_item">Tendonitis</li>
+                <li class="ailment_list_item">Muscle Spasms</li>
+                <li class="ailment_list_item">Nerve Entrapment Syndrome</li>
+                <li class="ailment_list_item">Wrist Pain</li>
+                <li class="ailment_list_item">Foot Pain</li>
+                <li class="ailment_list_item">Hernia</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">NEUROLOGICAL</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
                 <li class="ailment_list_item">Headaches</li>
-                <li class="ailment_list_item">Sprains</li>
-                <li class="ailment_list_item">Nueropathies</li>
                 <li class="ailment_list_item">Autism</li>
+                <li class="ailment_list_item">Palsy</li>
+                <li class="ailment_list_item">Neurological Disorder Rehabilitation</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Migraines</li>
+                <li class="ailment_list_item">Face Pain</li>
                 <li class="ailment_list_item">Tics</li>
+                <li class="ailment_list_item">Post-Operative / Surgery Recovery</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
                 <li class="ailment_list_item">Neuralgia</li>
-                <li class="ailment_list_item">Upper Back Pain</li>
-                <li class="ailment_list_item">Tennis Elbow</li>
-                <li class="ailment_list_item">Tendonitis</li>
-                <li class="ailment_list_item">Migraines</li>
-                <li class="ailment_list_item">Muscle Spasms</li>
-                <li class="ailment_list_item">Entrapment Syndrome</li>
                 <li class="ailment_list_item">Facial Paralysis</li>
-                <li class="ailment_list_item">Wrist Pain</li>
+                <li class="ailment_list_item">Stroke</li>
+                <li class="ailment_list_item">Pinched Nerve</li>
+                <li class="ailment_list_item">Trigeminal Neuralgia</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">CHRONIC CONDITIONS</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Hypertension (HBP)</li>
+                <li class="ailment_list_item">Hypoglycemia</li>
+                <li class="ailment_list_item">Thyroid Disorders</li>
+                <li class="ailment_list_item">Liver Fibrosis / Cirrhosis</li>
+                <li class="ailment_list_item">Cysts</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">High Cholesterol / Hypercholesterolemia</li>
+                <li class="ailment_list_item">Phlebitis</li>
+                <li class="ailment_list_item">Liver Diseases</li>
+                <li class="ailment_list_item">Infections</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Diabetes</li>
+                <li class="ailment_list_item">Thrombosis</li>
+                <li class="ailment_list_item">Hepatitis</li>
+                <li class="ailment_list_item">Tumors</li>
               </ul>
             </div>
           </div>
@@ -84,6 +149,7 @@
                 <li class="ailment_list_item">Sinusitis</li>
                 <li class="ailment_list_item">Allergies</li>
                 <li class="ailment_list_item">Dizziness</li>
+                <li class="ailment_list_item">Eye Problems</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -91,6 +157,7 @@
                 <li class="ailment_list_item">Sore Throat</li>
                 <li class="ailment_list_item">Ear Ache</li>
                 <li class="ailment_list_item">Vertigo</li>
+                <li class="ailment_list_item">Rhinitis</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -98,6 +165,7 @@
                 <li class="ailment_list_item">Hay Fever</li>
                 <li class="ailment_list_item">Ear Ringing</li>
                 <li class="ailment_list_item">Meniere&#x27;s Disease</li>
+                <li class="ailment_list_item">Tonsillitis<br>‍</li>
               </ul>
             </div>
           </div>
@@ -115,13 +183,18 @@
                 <li class="ailment_list_item">Infertility</li>
                 <li class="ailment_list_item">Menopause</li>
                 <li class="ailment_list_item">Erectile Dysfunction</li>
+                <li class="ailment_list_item">Polycystic Ovarian Syndrome (PCOS)</li>
+                <li class="ailment_list_item">Sterility</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">Menstrual Irregularities</li>
+                <li class="ailment_list_item">Menstrual Irregularities / Amenorrhea</li>
                 <li class="ailment_list_item">Breech Position</li>
                 <li class="ailment_list_item">Chronic Bladder Infection</li>
+                <li class="ailment_list_item">Hormone Imbalance</li>
+                <li class="ailment_list_item">Hot Flashes</li>
+                <li class="ailment_list_item">Miscarriage</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -129,6 +202,9 @@
                 <li class="ailment_list_item">Endometriosis</li>
                 <li class="ailment_list_item">Fibroids</li>
                 <li class="ailment_list_item">Morning Sickness</li>
+                <li class="ailment_list_item">Inducing Birth</li>
+                <li class="ailment_list_item">Hormonal Acne</li>
+                <li class="ailment_list_item">Prenatal Issues</li>
               </ul>
             </div>
           </div>
@@ -142,6 +218,7 @@
               <ul role="list">
                 <li class="ailment_list_item">Asthma</li>
                 <li class="ailment_list_item">Common Cold</li>
+                <li class="ailment_list_item">Valley Fever</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -169,16 +246,20 @@
               <ul role="list">
                 <li class="ailment_list_item">Anxiety</li>
                 <li class="ailment_list_item">Stress</li>
+                <li class="ailment_list_item">Sleep Disturbances</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
                 <li class="ailment_list_item">Insomnia</li>
+                <li class="ailment_list_item">Seasonal Affective Disorder (SAD)</li>
+                <li class="ailment_list_item">Restless Leg Syndrome</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
                 <li class="ailment_list_item">Depression</li>
+                <li class="ailment_list_item">Panic Attacks</li>
               </ul>
             </div>
           </div>
@@ -194,14 +275,17 @@
                 <li class="ailment_list_item">Diarrhea</li>
                 <li class="ailment_list_item">Gastritis</li>
                 <li class="ailment_list_item">Hemorrhoids</li>
+                <li class="ailment_list_item">Nausea</li>
+                <li class="ailment_list_item">Indigestion</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
                 <li class="ailment_list_item">Colitis</li>
                 <li class="ailment_list_item">Food Allergies</li>
-                <li class="ailment_list_item">Hyperacidity / Acid Reflux</li>
+                <li class="ailment_list_item">Hyperacidity / Acid Reflux / GERD</li>
                 <li class="ailment_list_item">Dysentery</li>
+                <li class="ailment_list_item">Vomiting</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -209,6 +293,56 @@
                 <li class="ailment_list_item">Constipation</li>
                 <li class="ailment_list_item">Ulcers</li>
                 <li class="ailment_list_item">Abdominal Bloating</li>
+                <li class="ailment_list_item">Hearthburn</li>
+                <li class="ailment_list_item">Abdominal Pain</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">AUTOIMMUNE DISORDERS</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Rheumatoid Arthritis</li>
+                <li class="ailment_list_item">Grave&#x27;s Disease</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Psoriatic Arthritis</li>
+                <li class="ailment_list_item">Crohn&#x27;s Disease</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Lupus</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">UROLOGICAL</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Incontinence</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Urinary Tract Infection (UTI)</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Urinary Dysfunction</li>
               </ul>
             </div>
           </div>
@@ -235,6 +369,7 @@
             <div class="_3_block">
               <ul role="list">
                 <li class="ailment_list_item">Multiple Sclerosis</li>
+                <li class="ailment_list_item">Weak / Imbalanced Immune System</li>
               </ul>
             </div>
           </div>
@@ -271,6 +406,7 @@
             <div class="_3_block">
               <ul role="list">
                 <li class="ailment_list_item">High Blood Pressure</li>
+                <li class="ailment_list_item">Heart Conditions</li>
               </ul>
             </div>
             <div class="_3_block">
