Added images for each category of conditions treated, a mask for opacity blend and adjusted some classes

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Sep 27 2020 02:27:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 27 2020 04:46:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,9 @@
       <h2 class="section_h2">CONDITIONS TREATED</h2>
       <p>According to the National Institutes of Health, Traditional Chinese medicine (TCM) is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="muscoskeletal_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">MUSCOSKELETAL</h3>
           <div class="_3_block_row">
@@ -74,6 +76,7 @@
           </div>
         </div>
       </div>
+      <div class="blue_divide"></div>
       <div class="_2_block_row_ailment_left">
         <div class="_2_block">
           <h3 class="ailment_h3_left">NEUROLOGICAL</h3>
@@ -105,10 +108,14 @@
             </div>
           </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="neurological_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="chronic_conditions_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">CHRONIC CONDITIONS</h3>
           <div class="_3_block_row">
@@ -170,10 +177,14 @@
             </div>
           </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="ent_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="reproductive_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h3>
           <div class="_3_block_row">
@@ -234,11 +245,18 @@
               </ul>
             </div>
           </div>
+          <div class="respitory_block">
+            <div class="services_mask_right"></div>
+          </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="respitory_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="psychological_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">EMOTIONAL, PHYSCOLOGICAL</h3>
           <div class="_3_block_row">
@@ -299,10 +317,14 @@
             </div>
           </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="gastrointestinal_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="autoimmune_disorders_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">AUTOIMMUNE DISORDERS</h3>
           <div class="_3_block_row">
@@ -347,10 +369,14 @@
             </div>
           </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="urological_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="immune_system_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">IMMUNE SYSTEM</h3>
           <div class="_3_block_row">
@@ -396,10 +422,14 @@
             </div>
           </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="dermatological_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <div class="_2_block_row_ailment_right">
-        <div class="_2_block"></div>
+        <div class="circulatory_block">
+          <div class="services_mask_left"></div>
+        </div>
         <div class="_2_block">
           <h3 class="ailment_h3_right">CIRCULATORY</h3>
           <div class="_3_block_row">
@@ -444,7 +474,9 @@
             </div>
           </div>
         </div>
-        <div class="_2_block"></div>
+        <div class="addiction_block">
+          <div class="services_mask_right"></div>
+        </div>
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a href="#" class="ryu_button w-button">Schedule Appointment</a></div>
   </div>
