--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Sep 27 2020 04:46:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 27 2020 08:25:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,8 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -18,8 +20,8 @@
 </head>
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="w-nav-link">Home</a><a href="team.html" class="w-nav-link">Team</a><a href="services.html" class="w-nav-link">Services</a><a href="conditions-treated.html" aria-current="page" class="w-nav-link w--current">Conditions Treated</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+    <div class="menu_container">
+      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" aria-current="page" class="nav-link-3 w-nav-link w--current">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -33,8 +35,8 @@
         <div class="muscoskeletal_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">MUSCOSKELETAL</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">MUSCOSKELETAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -76,10 +78,9 @@
           </div>
         </div>
       </div>
-      <div class="blue_divide"></div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">NEUROLOGICAL</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">NEUROLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -116,8 +117,8 @@
         <div class="chronic_conditions_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">CHRONIC CONDITIONS</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">CHRONIC CONDITIONS</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -148,8 +149,8 @@
         </div>
       </div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">EYE, EAR, NOSE, THROAT</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">EYE, EAR, NOSE, THROAT</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -185,8 +186,8 @@
         <div class="reproductive_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -222,8 +223,8 @@
         </div>
       </div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">RESPIRATORY</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">RESPIRATORY</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -257,8 +258,8 @@
         <div class="psychological_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">EMOTIONAL, PHYSCOLOGICAL</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">EMOTIONAL, PHYSCOLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -284,8 +285,8 @@
         </div>
       </div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">GASTROINTESTINAL</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">GASTROINTESTINAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -325,8 +326,8 @@
         <div class="autoimmune_disorders_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">AUTOIMMUNE DISORDERS</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">AUTOIMMUNE DISORDERS</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -349,8 +350,8 @@
         </div>
       </div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">UROLOGICAL</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">UROLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -377,8 +378,8 @@
         <div class="immune_system_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">IMMUNE SYSTEM</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">IMMUNE SYSTEM</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -402,8 +403,8 @@
         </div>
       </div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">DERMATOLOGICAL</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">DERMATOLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -430,8 +431,8 @@
         <div class="circulatory_block">
           <div class="services_mask_left"></div>
         </div>
-        <div class="_2_block">
-          <h3 class="ailment_h3_right">CIRCULATORY</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">CIRCULATORY</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -453,8 +454,8 @@
         </div>
       </div>
       <div class="_2_block_row_ailment_left">
-        <div class="_2_block">
-          <h3 class="ailment_h3_left">ADDICTION</h3>
+        <div class="_2_block_middle">
+          <h3 class="ailment_h3">ADDICTION</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -484,7 +485,7 @@
     <div class="ends_container">
       <div class="_4_block_row">
         <div class="_4_block">
-          <h3 class="footer_h3">RYU ACUPUNCTURE</h3>
+          <h3 class="footer_h3">Ryu Acupuncture</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link-2"></li>
@@ -495,8 +496,9 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="team.html" class="link_white">About</a></li>
+              <li class="footer_link"><a href="ourteam.html" class="link_white">About</a></li>
               <li class="footer_link"><a href="services.html" class="link_white">Services</a></li>
+              <li class="footer_link"><a href="conditions-treated.html" aria-current="page" class="link_white w--current">Conditions Treated</a></li>
               <li class="footer_link"><a href="testimonials.html" class="link_white">Testimonials</a></li>
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
