--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Sep 27 2020 04:46:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 27 2020 08:25:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -8,22 +8,23 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
-<body>
+<body class="body">
   <div id="Hero" class="hero_section">
     <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true"><source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true"></video>
-      <h1 class="heading">Ryu Acupuncture Clinic, Inc</h1>
-      <h1 class="heading-2">Wellness is a journey</h1>
-    </div>
+      <h1 class="ryu_title">Ryu Acupuncture Clinic, Inc</h1>
+      <h1 class="ryu_tagline">&quot;Wellness is a journey...&quot;</h1><a href="#" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" aria-current="page" class="w-nav-link w--current">Home</a><a href="team.html" class="w-nav-link">Team</a><a href="services.html" class="w-nav-link">Services</a><a href="conditions-treated.html" class="w-nav-link">Conditions Treated</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+    <div class="menu_container">
+      <nav role="navigation" class="w-nav-menu"><a href="index.html" aria-current="page" class="nav-link-6 w-nav-link w--current">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -102,7 +103,7 @@
           <h3 id="w-node-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
           <p id="w-node-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-      </div><a href="services.html" class="ryu_button w-button">Learn More</a></div>
+      </div><a href="services.html" class="ryu_button w-button"><strong>Learn More</strong></a></div>
   </div>
   <div class="parallax_section">
     <div class="parallax_block_cupping"></div>
@@ -176,11 +177,11 @@
     <div class="main_container">
       <h1 class="section_h2">Contact Us</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="_2_block_row_ailment_right">
-        <div class="_2_block">
+      <div class="_2_block_row">
+        <div class="_2_block margin_right">
           <div class="w-widget w-widget-map"></div>
         </div>
-        <div class="_2_block">
+        <div class="_2_block margin_left">
           <div class="w-form">
             <form id="email-form" name="email-form" data-name="Email Form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email-2">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email-2">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" class="w-input"></textarea>
               <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
@@ -199,7 +200,7 @@
     <div class="ends_container">
       <div class="_4_block_row">
         <div class="_4_block">
-          <h3 class="footer_h3">RYU ACUPUNCTURE</h3>
+          <h3 class="footer_h3">Ryu Acupuncture</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link-2"></li>
@@ -210,8 +211,9 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="team.html" class="link_white">About</a></li>
+              <li class="footer_link"><a href="ourteam.html" class="link_white">About</a></li>
               <li class="footer_link"><a href="services.html" class="link_white">Services</a></li>
+              <li class="footer_link"><a href="conditions-treated.html" class="link_white">Conditions Treated</a></li>
               <li class="footer_link"><a href="testimonials.html" class="link_white">Testimonials</a></li>
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
