--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Sep 27 2020 04:46:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 27 2020 08:25:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,8 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -18,8 +20,8 @@
 </head>
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="w-nav-link">Home</a><a href="team.html" class="w-nav-link">Team</a><a href="services.html" aria-current="page" class="w-nav-link w--current">Services</a><a href="conditions-treated.html" class="w-nav-link">Conditions Treated</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+    <div class="menu_container">
+      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" aria-current="page" class="nav-link-2 w-nav-link w--current">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -32,7 +34,7 @@
     <div class="ends_container">
       <div class="_4_block_row">
         <div class="_4_block">
-          <h3 class="footer_h3">RYU ACUPUNCTURE</h3>
+          <h3 class="footer_h3">Ryu Acupuncture</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link-2"></li>
@@ -43,8 +45,9 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="team.html" class="link_white">About</a></li>
+              <li class="footer_link"><a href="ourteam.html" class="link_white">About</a></li>
               <li class="footer_link"><a href="services.html" aria-current="page" class="link_white w--current">Services</a></li>
+              <li class="footer_link"><a href="conditions-treated.html" class="link_white">Conditions Treated</a></li>
               <li class="footer_link"><a href="testimonials.html" class="link_white">Testimonials</a></li>
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
