Adjusted color spectrums for testimonials on home page and services page, minor edits to styling throughout site, fixed overlooked button style changes

--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Sep 27 2020 09:59:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 27 2020 11:14:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,8 @@
   <div class="testimonial_page_section">
     <div class="main_container mix-container">
       <h2 class="section_h2">Testimonials</h2>
-      <div class="filter-controls"><a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>All</strong></a><a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>Yelp</strong></a><a data-filter=".2009" href="#" class="filter-button ryu_testimonial_button w-button"><strong>Google</strong></a><a href="#" class="filter-button ryu_testimonial_button w-button"><strong>Facebook</strong></a></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <div class="filter-controls"><a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>ALL</strong></a><a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a><a data-filter=".2009" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a><a href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a></div>
       <div class="testimonial_block_white mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
         <p class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="" class="testimonial_image">
         <div class="testimonial_author">Sakie M.</div>
