Added Lottieflow animations, Google reviews, adjusted paragraph style for solo paras and other minor adjustments

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Sep 28 2020 01:33:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 28 2020 02:31:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
   <div class="conditions_treated_page">
     <div class="main_container">
       <h2 class="section_h2">Conditions Treated</h2>
-      <p>According to the National Institutes of Health, Traditional Chinese medicine (TCM) is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
+      <p class="solo_para">According to the National Institutes of Health, Traditional Chinese medicine (TCM) is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
       <div class="_2_block_row_ailment_right">
         <div class="muscoskeletal_block">
           <div class="services_mask_left"></div>
@@ -478,7 +478,7 @@
           <div class="services_mask_right"></div>
         </div>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a href="#" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a href="#" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
   </div>
   <div class="footer_section">
     <div class="ends_container">
