--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Sep 28 2020 01:33:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 28 2020 02:31:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
   <div id="Services" class="services_section">
     <div class="main_container">
       <h2 class="section_h2">Services</h2>
-      <p class="main_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="cards_grid">
         <div id="w-node-bb3cbd291ef5-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
@@ -176,7 +176,7 @@
   <div id="Contact" class="contact_section">
     <div class="main_container">
       <h1 class="section_h2">Contact Us</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
           <div class="w-widget w-widget-map"></div>
